--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,30 @@
 services:
   db:
-    image: postgres:16
+    image: postgres:15-alpine
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 111  # Замените на свой пароль
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: schedule_db
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
-      - "5433:5432"  # Map host port 5433 to container port 5432 (default PostgreSQL port)
+      - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD", "pg_isready", "-U", "postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   api:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/schedule_db
     depends_on:
       db:
         condition: service_healthy
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 111  # Замените на свой пароль
-      POSTGRES_HOST: db
-      POSTGRES_PORT: 5433  # Порт внутри Docker-сети
-      POSTGRES_DB: schedule_db
     ports:
       - "8000:8000"
+    restart: unless-stopped
 
 volumes:
-  postgres_data:
+  pgdata: {}
