--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       retries: 5
 
   api:
-    build: .
+    image: schedule-api:latest
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5433/schedule_db
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/schedule_db
     depends_on:
       db:
         condition: service_healthy
