fix: docs url and docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    env_file:
+      - .env
     ports:
-      - "8000:8000"
+      - "8010:8000"
     restart: unless-stopped
 
 volumes:
